# c2-skills

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  cliff.toml  justfile  main.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: release.yml  setup-branches.yml
dashboard/: conf.py  main.py  modify_skills.py  parse_skills.py
dashboard/io/: encuesta_parser.py  library_skills_parser.py
dashboard/resources/: encuesta_fundamentos.md
data/: a1.csv  fundamentals.xlsx
encuestas_finales/: encuesta_de_perfil.md  fundamentals.md  fundamentals_template.md
miembros/Alex/: fundamentals.md  fundamentals_template.md
miembros/AlexanderNoblejas/: fundamentals.md
miembros/braitsan/: fundamentals.md
miembros/elias/: FUNDAMENTALS.md
miembros/esteban/: FUNDAMENTALS.md
miembros/gonzalo/: FUNDAMENTALS.md
miembros/jhon/: fundamentals.md
miembros/josue/: fundamentals.md
miembros/juan/: fundamentals.md
miembros/juancollantes/: fundamentals.md  fundamentals_template.md
miembros/luis-cieza/: FUNDAMENTALS.md
miembros/michael/: FUNDAMENTALS.md  PERFIL.md
skills/: _modify_skills.py  _parse_skills.py  conf.py  main.py
skills/app/: general.py  overview.py
skills/app/pages/: 2_individual.py  2_overview.py
skills/app/shared/: __init__.py  figures.py  utils.py
skills/io/: encuesta_parser.py  encuesta_renderer.py
skills/jinja_templates/: fundamentals.md.jinja2
sources/: fundamentals.xlsx  fundamentals.yml  library_skills.xlsx
src/skills/: _models.py  conf.py
src/skills/app/: general.py
src/skills/app/pages/: 2_individual.py  3_ranking.py  4_mentoria.py
src/skills/app/shared/: __init__.py  colors.py  figures.py  utils.py
src/skills/io/: encuesta_parser.py  encuesta_renderer.py
src/skills/jinja_templates/: encuesta_perfil.md.jinja2  fundamentals.md.jinja2
test/: forms.py
