[project]
name = "c2-skills"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastexcel>=0.20.2",
    "plotly>=6.6.0",
    "polars>=1.41.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "streamlit>=1.56.0",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.3",
    "commitizen>=4.16.4",
    "isort>=8.0.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skills"]


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
