[project]
name = "c2-skills"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastexcel>=0.20.2",
    "plotly>=6.6.0",
    "polars>=1.41.1",
    "pre-commit>=4.6.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "streamlit>=1.56.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.16.4",
    "git-cliff>=2.13.1",
    "ruff>=0.15.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skills"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"

[tool.ruff.lint]
select = ["F", "I", "E"]
ignore = ["E501"]
